# llm-inspect-wrappers

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_addon.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  kb-ci.yml  release.yml
bash/: .pre-commit-config.yaml  README.md  xwrap
bash/tests/: test_xwrap.py
docs/: caps_and_omissions.md  context_and_task.md  proposals_evaluation.md
docs/archive/: proposals_evaluation.md
docs/dev_plans/: 2026-04-04-improve-fd-rg-meta.md  2026-04-18-imrpove-fd-rg-meta.md
docs/proposals/proposal_glm_5_1/: AGENTS_addon.md
docs/proposals/proposal_gpt_5_2/: AGENTS_addon.md  proposal-gpt_5_2.md
internal/: check_repo_hygiene.py
kb/: AGENTS_kb.md
kb/config/: obligations.toml  tags.toml
kb/facts/: facts.jsonl
kb/templates/: session.json
kb/tooling/: install_kb.sh  kb-ci-check.sh  kb-gate.sh  kb-pre-commit.sh
proposals/proposal_glm_5_1/: proposal_glm_5_1.md
proposals/proposal_gpt_5_2/llm-inspect-wrappers-rs/: Cargo.toml
proposals/proposal_gpt_5_2/llm-inspect-wrappers-rs/scripts/: install.sh
proposals/proposal_gpt_5_2/llm-inspect-wrappers-rs/src/: common.rs  facts.rs  main.rs  rgx.rs  sedx.rs
proposals/proposal_gpt_5_4/: AGENTS_addon.md  llm_inspect.py  proposal_gpt_5_4.md
python/: README.md  llm_inspect.py  pyproject.toml
python/tests/: test_llm_inspect.py
rust/: .pre-commit-config.yaml  Cargo.toml  README.md
rust/src/: common.rs  fdx.rs  gate.rs  main.rs  rgx.rs  sedx.rs
scripts/: package_release.sh  release_local.sh  test_all.sh
tests/: test_cross_validate.py
(+9 files in other folders)
