[package]
name = "tool-x"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Best-effort, passthrough wrappers around fd/rg/sed for LLM-friendly repo inspection."
repository = ""

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
